2011-01-25  Robert Larice
 * src/frontend/Makefile.am ,
 * src/spicelib/devices/adms/admst/ngspiceMakefile.am.xml
 * src/spicelib/parser/Makefile.am
   small fixes to make some `Makefiles' ready for build in a separate directory

11-01-18 Holger Vogt
 * plotcurv.c: line 139 test for existance of v_plot before comparing 
  pl_scale
  
11-01-16 Holger Vogt
 * com_cdump.c: remove compiler warnings
 * 1-f-code.c, 1-f-code.h, vsrc.c, vsrcacct.c, vsrcdefs.h,
   vsrcload.c, vsrcpar.c, examples/opwien.sp:
   Add new random voltage generator option trrandom to vsrc
   voltage source

2011-01-15  Robert Larice
 * src/frontend/trannoise/Makefile.am ,
 * src/include/Makefile.am ,
 * src/maths/fft/Makefile.am ,
 * tests/Makefile.am ,
 * src/maths/fft/Read\ Me ,
 * src/maths/fft/Read-Me :
    updates for the make infrastructure (trannoise and tests/xspice)
    renamed "Read Me" to avoid whitespace in the filename

11-01-13 Dietmar Warning
 * devices/adms/admst/*.xml: set version parameter to 2.3.0 to come in line with admsXml

11-01-12 Dietmar Warning
 * devices/adms/admst/ngspiceMODULEdefs.h.xml: allow gmin stepping by using ckt->CKTdiagGmin

11-01-11 Holger Vogt
 * postcoms.c: dynamic memory allocation for buf and buf2 in fcn com_print()

11-01-08 Holger Vogt
 * com_cdump.c: add #include "ngspice.h" to allow use of command 'cdump'
   also under Windows 

11-01-06 Holger Vogt
 * inpcom.c: allow models like 2N2904 or 2SK136 also in subcircuits
 * examples/Monte_Carlo/mc_ring.sp: reduce memory consumption by adding
   'save' command, add jitter measurement

11-01-03 Holger Vogt
 * spiceif.c: add error checking for 'altermod'

11-01-02 Dietmar Warning
 * math/fft/fftlib.c: inline functions to static
 * ngspice.h: __inline for _MSC_VER

11-01-02 Holger Vogt   
 * spiceif.c: recall yesterday's change due to errors, if reset was given before
   install again, but only for CKTtime > 0

11-01-01 Holger Vogt   
 * breakp.c: update to multiple conditionals with '=' in stop command