@@ -1,4 +1,15 @@
 2011-01-25  Robert Larice
+ * src/xspice/cmpp/cmpp.h ,
+ * src/xspice/cmpp/pp_lst.c ,
+ * src/xspice/cmpp/pp_mod.c ,
+ * src/xspice/cmpp/read_ifs.c ,
+ * src/xspice/cmpp/util.c ,
+ * src/xspice/cmpp/writ_ifs.c :
+   prepare the xspice cmpp processor for build in a separate directory
+   Two environment variables are introduced to augment the the hardwired
+     filenames with directory names
+
+2011-01-25  Robert Larice
  * src/frontend/Makefile.am ,
  * src/spicelib/devices/adms/admst/ngspiceMakefile.am.xml
  * src/spicelib/parser/Makefile.am
